Fixed linked-in images whose urls had changed. Altered some copy.

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
               aria-expanded="false">Projects</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#project-blackbox">Black Box (Game)</a>
-              <a class="dropdown-item" href="#project-velo-studio">Velo Studio (Shop)</a>
+              <a class="dropdown-item" href="#project-velo-studio">Velo Studio (eCommerce)</a>
               <a class="dropdown-item" href="#project-wedding">Wedding (Website)</a>
               <a class="dropdown-item" href="#project-ejss3">Eloquent JavaScript Solutions (Website/API)</a>
+              <a class="dropdown-item" href="#project-rainbow-forest">Rainbow Forest (Animation/Canvas)</a>
               <!-- <a class="dropdown-item" href="#">Spotify to Tidal (API)</a> -->
               <!-- <a class="dropdown-item" href="#">Strava Polariser (Website/API)</a> -->
             </div>
@@ -266,7 +267,7 @@
         <div class="profile-info-container">
           <p class="h4">Hi there! I’m, Jon.</p>
           <p>I design and develop web applications for computers, mobiles and tablets.</p>
-          <p>I'm looking for a new job as a Junior Web Developer.</p>
+          <p>I'm looking for a new job as a Web Developer.</p>
           <p>You can find examples of my work on this website.</p>
           <p>I love cycling, especially on quiet hilly roads, gravel and byways.</p>
           <p>My taste in music is rather eclectic, ranging from indie pop to afrobeat (amongst many other music genres).</p>
@@ -297,9 +298,8 @@
         <p>Now, I am completely refreshing my technological skillset and focusing on developing web applications using open
           source technologies.</p>
         <p>Eventually, I will become a Full Stack Open Source JavaScript Developer.</p>
-        <p>I'm looking for a job as a Junior Web Developer and to quickly progress from there.</p>
-        <p>Why a role as a Junior, given my experience? I realise that there is a mountain of stuff to learn to be a web developer
-          so it is unreasonable for me to take a senior role until I have proven myself. My past experience will stand me
+        <p>Right now, I'm looking for my first job as a Web Developer.</p>
+        <p>I realise that there is a mountain of stuff to learn to be a web developer but my past experience will stand me
           in good stead and I expect to progress quickly. Software development is not just about programming, it takes years
           of experience to be able to architect, design and build large scale software and I already have those skills. I
           just need to apply them to an area of technology that is relatively new to me.</p>
@@ -398,11 +398,11 @@
           <li>
             <div class="h4">
               <span class="badge badge-primary">Programming:</span>&nbsp;
+              <span class="badge badge-secondary">JavaScript</span>&nbsp;
+              <span class="badge badge-secondary">ES6</span>&nbsp;
               <span class="badge badge-secondary">HTML</span>&nbsp;
               <span class="badge badge-secondary">CSS</span>&nbsp;
               <span class="badge badge-secondary">SASS</span>&nbsp;
-              <span class="badge badge-secondary">JavaScript</span>&nbsp;
-              <span class="badge badge-secondary">ES6</span>&nbsp;
               <span class="badge badge-secondary">XML</span>&nbsp;
               <span class="badge badge-secondary">Node</span>&nbsp;
               <span class="badge badge-secondary">SEO</span>&nbsp;
@@ -508,7 +508,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/4/000/15b/0b7/2cb78e9.jpg"
+            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/will-daniels.jpg"
               alt="Will Daniels, Experienced Software Engineer">
             <div class="card-body">
               <h4 class="card-title">Our Best Software Architect</h4>
@@ -527,7 +527,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/005/0ac/1a4/2a2f67f.jpg"
+            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/jason-spencer.jpg"
               alt="Jason Spencer, Partner at Deloitte">
             <div class="card-body">
               <h4 class="card-title">A Natural Problem Solver</h4>
@@ -545,7 +545,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/3/000/042/2b8/1f9b4be.jpg"
+            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/john-sewell.jpg"
               alt="John Sewell, Team Leader and Developer at Fidessa LatentZero">
             <div class="card-body">
               <h4 class="card-title">A Superb Developer and a Valued Asset to Any Software Company</h4>
@@ -564,7 +564,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/5/000/1d1/36e/11eef05.jpg"
+            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/stuart-may.jpg"
               alt="Stuart May, Experienced Product Management Executive">
             <div class="card-body">
               <h4 class="card-title">Exceptional Analytical Skills</h4>
@@ -581,7 +581,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/media/p/3/000/05a/37a/172c204.jpg"
+            <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/hitesh-mistry.jpg"
               alt="Hitesh Mistry, Head-Delivery & Projects at S-Cube Futuretech Private Limited">
             <div class="card-body">
               <h4 class="card-title">Incredibly Helpful and Knowledgeable</h4>
@@ -610,7 +610,7 @@
         <div id="collapsedTestimonials" class="collapse">
           <div class="card-container">
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAjmAAAAJDI5NDViYWU2LTAyMjctNGIzOS05NjlhLWZiMzFlNmYzM2NjMQ.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/andor-miles-board.jpg"
                 alt="Andor Miles-Board, Marketing & Business Development Manager at NextGen Technology">
               <div class="card-body">
                 <h4 class="card-title">Creates Business Technology Solutions that Deliver a Competitive Advantage</h4>
@@ -662,7 +662,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAhuAAAAJDYxNWNiODJhLTU2OGItNDM1Zi1iZjlhLTYwY2U4YWYwY2VlNw.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/stephen-williamson.jpg"
                 alt="Stephen Williamson, Director, Software Engineering at CACI Ltd">
               <div class="card-body">
                 <h4 class="card-title">Ability to Learn Quickly</h4>
@@ -678,7 +678,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/1/005/042/296/05f64da.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/nick-loizos.jpg"
                 alt="Nick Loizos, Applications & Infrastructure Manager at BP">
               <div class="card-body">
                 <h4 class="card-title">Excellent Interpersonal Skills</h4>
@@ -714,7 +714,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/7/005/05f/2f7/1ac3f1d.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/martin-davies.jpg"
                 alt="Martin Davies, Risk Framework Architect at Causal Capital">
               <div class="card-body">
                 <h4 class="card-title">You Can Definitely Depend On Him To Deliver</h4>
@@ -733,7 +733,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/1/000/092/2d4/0714a61.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/angela-lyras.jpg"
                 alt="Angela Lyras, Content Analysis Manager at Ulysses Systems">
               <div class="card-body">
                 <h4 class="card-title">Excellent at Handling Complex and Difficult Assignments</h4>
@@ -751,7 +751,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/8/000/1bb/197/3317759.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/mohammed-amir.jpg"
                 alt="Mohammed Amir, Senior Database Consultant">
               <div class="card-body">
                 <h4 class="card-title">Strong Technical and Leadership Skills</h4>
@@ -768,7 +768,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/4/005/027/1ac/2b1aee4.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/catherine-tryfona.jpg"
                 alt="Catherine Tryfona, Senior Lecturer in Computing at Cardiff Metropolitan University">
               <div class="card-body">
                 <h4 class="card-title">I Thoroughly Enjoyed Working With Jon</h4>
@@ -804,7 +804,7 @@
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAArPAAAAJDk4NmU4MmJlLWU5M2MtNGM1OC1hNmFmLTI1MmQyMjQ1M2QzOA.jpg"
+              <img class="card-img-top img-fluid mx-auto d-block rounded-circle" style="max-width: 10rem; height: auto;" src="img/profiles/edward-norton.jpg"
                 alt="Edward Norton, Dad">
               <div class="card-body">
                 <h4 class="card-title">He's Known as 'Quality' Jon for Good Reason</h4>
@@ -872,7 +872,7 @@
             The JavaScript and CSS is vanilla.</p>
           <p>I wanted to practice different layout methods so I used Grid CSS with a fallback of Flex. For browsers that don't
             support either Grid or Flex I fallback to a basic block and float layout.</p>
-          <p>The website is responsive of course. I regard this as a fundamental requirement, building a mobile friendly site
+          <p>The website is responsive, of course. I regard this as a fundamental requirement, building a mobile friendly site
             first and then progressively enhancing the site depending on the device's capabilities and available screen real
             estate.
           </p>
