--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,8 @@
             <span class="badge badge-primary">Promises</span>&nbsp;
             <span class="badge badge-primary">Async</span>&nbsp;
             <span class="badge badge-primary">Await</span>&nbsp;
-            <span class="badge badge-primary">Fetch</span>&nbsp;
+            <span class="badge badge-primary">Class</span>&nbsp;
+            <span class="badge badge-primary">Fetch Paged Data</span>&nbsp;
             <span class="badge badge-primary">Markdown</span>&nbsp;
             <span class="badge badge-primary">Syntax Highlighing</span>&nbsp;
             <span class="badge badge-primary">Polyfills</span>&nbsp;
@@ -1488,6 +1489,105 @@
                 </tbody>
               </table>
             </div>
+          </div>
+        </div>
+        <div id="project-lambda-email-service" class="card flex-card">
+          <div class="card-header text-center">AWS Lambda Email Service</div>
+          <div class="card-body">
+            <p class="card-text">Serverless email service built using Amazon Web Services, Lambda Function, Node.js, and Simple Email Service
+              (SES).
+            </p>
+          </div>
+          <div class="h4 text-center">
+            <span class="badge badge-primary">AWS</span>&nbsp;
+            <span class="badge badge-primary">Lambda</span>&nbsp;
+            <span class="badge badge-primary">Node.js</span>&nbsp;
+            <span class="badge badge-primary">SES</span>&nbsp;
+            <span class="badge badge-primary">Serverless Framework</span>&nbsp;
+          </div>
+          <div class="card-footer text-right">
+            <a class="float-left" href="https://github.com/jonurry/lambda-email-service" target="_blank" rel="noopener" aria-label="GitHub Repository">
+              <svg aria-labelledby="simpleicons-github-icon" class="navbar-nav-svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>GitHub Repository</title>
+                <path visibility="visible" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+                  style="fill-opacity: 1;"></path>
+              </svg>
+            </a>
+            <!-- <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-ejss3-collapse" aria-expanded="false"
+              aria-controls="project-ejss3-collapse">
+              Show/Hide Details
+            </button> -->
+          </div>
+        </div>
+        <div id="project-rainbow-forest" class="card flex-card">
+          <div class="card-header text-center">Rainbow Forest</div>
+          <div class="card-body">
+            <p class="card-text">JavaScript 2d canvas animation of a person walking through a randomly generated rainbow forest.</p>
+          </div>
+          <div class="h4 text-center">
+            <span class="badge badge-primary">JavaScript</span>&nbsp;
+            <span class="badge badge-primary">ES6/7</span>&nbsp;
+            <span class="badge badge-primary">Modules</span>&nbsp;
+            <span class="badge badge-primary">Class</span>&nbsp;
+            <span class="badge badge-primary">Canvas</span>&nbsp;
+            <span class="badge badge-primary">Animation</span>&nbsp;
+            <span class="badge badge-primary">Queue</span>&nbsp;
+            <span class="badge badge-primary">Sprite</span>&nbsp;
+          </div>
+          <div class="card-footer text-right">
+            <a class="float-left" href="https://github.com/jonurry/rainbow-forest" target="_blank" rel="noopener" aria-label="GitHub Repository">
+              <svg aria-labelledby="simpleicons-github-icon" class="navbar-nav-svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>GitHub Repository</title>
+                <path visibility="visible" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+                  style="fill-opacity: 1;"></path>
+              </svg>
+            </a>
+            <a class="float-left" href="http://rainbow-forest.urry.me/" target="_blank" rel="noopener" aria-label="Rainbow Forest">
+              <svg aria-labelledby="material.io-website-icon" class="navbar-nav-svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>Visit Website</title>
+                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm-5 14H4v-4h11v4zm0-5H4V9h11v4zm5 5h-4V9h4v9z"
+                />
+                <path d="M0 0h24v24H0z" fill="none" />
+              </svg>
+            </a>
+            <!-- <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-ejss3-collapse" aria-expanded="false"
+              aria-controls="project-ejss3-collapse">
+              Show/Hide Details
+            </button> -->
+          </div>
+        </div>
+        <div id="project-life" class="card flex-card">
+          <div class="card-header text-center">Game of Life!</div>
+          <div class="card-body">
+            <p class="card-text">Vanilla ES6 implementation of the game of life.</p>
+          </div>
+          <div class="h4 text-center">
+            <span class="badge badge-primary">JavaScript</span>&nbsp;
+            <span class="badge badge-primary">ES6/7</span>&nbsp;
+            <span class="badge badge-primary">Generator</span>&nbsp;
+            <span class="badge badge-primary">Class</span>&nbsp;
+            <span class="badge badge-primary">CSS3</span>&nbsp;
+          </div>
+          <div class="card-footer text-right">
+            <a class="float-left" href="https://github.com/jonurry/life" target="_blank" rel="noopener" aria-label="GitHub Repository">
+              <svg aria-labelledby="simpleicons-github-icon" class="navbar-nav-svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>GitHub Repository</title>
+                <path visibility="visible" d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
+                  style="fill-opacity: 1;"></path>
+              </svg>
+            </a>
+            <a class="float-left" href="http://life.urry.me/" target="_blank" rel="noopener" aria-label="Black Box">
+              <svg aria-labelledby="material.io-website-icon" class="navbar-nav-svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <title>Visit Website</title>
+                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm-5 14H4v-4h11v4zm0-5H4V9h11v4zm5 5h-4V9h4v9z"
+                />
+                <path d="M0 0h24v24H0z" fill="none" />
+              </svg>
+            </a>
+            <!-- <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#project-ejss3-collapse" aria-expanded="false"
+              aria-controls="project-ejss3-collapse">
+              Show/Hide Details
+            </button> -->
           </div>
         </div>
         <div id="project-wedding" class="card flex-card">
