Fixed overflowing width of some elements at very small screen sizes.

--- a/index.html
+++ b/index.html
@@ -470,16 +470,7 @@
         </ul>
         <br>
         <p class="text-center never-stop-learning">
-          <span class="badge badge-pill">
-            <!-- <span class="badge badge-pill badge-secondary">&nbsp;</span>&nbsp; -->
-            <!-- <span class="badge badge-primary">Never</span>&nbsp; -->
-            <!-- <span class="badge badge-pill badge-secondary">&nbsp;</span>&nbsp; -->
-            <!-- <span class="badge badge-primary">Stop</span>&nbsp; -->
-            <!-- <span class="badge badge-pill badge-secondary">&nbsp;</span>&nbsp; -->
-            <!-- <span class="badge badge-primary">Learning!</span>&nbsp; -->
-            <!-- <span class="badge badge-pill badge-secondary">-</span> -->
-            &nbsp;&nbsp;&nbsp;Never&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stop&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Learning!&nbsp;&nbsp;&nbsp;
-          </span>
+          <span class="badge badge-pill">Never Stop Learning!</span>
         </p>
         <br>
       </div>
