Updated skills to include React and Jest etc...

--- a/index.html
+++ b/index.html
@@ -404,11 +404,16 @@
               <span class="badge badge-primary">Programming:</span>&nbsp;
               <span class="badge badge-secondary">JavaScript</span>&nbsp;
               <span class="badge badge-secondary">ES6</span>&nbsp;
+              <span class="badge badge-secondary">ES7</span>&nbsp;
+              <span class="badge badge-secondary">ES8</span>&nbsp;
+              <span class="badge badge-secondary">React</span>&nbsp;
+              <span class="badge badge-secondary">Jest</span>&nbsp;
               <span class="badge badge-secondary">HTML</span>&nbsp;
               <span class="badge badge-secondary">CSS</span>&nbsp;
               <span class="badge badge-secondary">SASS</span>&nbsp;
               <span class="badge badge-secondary">XML</span>&nbsp;
               <span class="badge badge-secondary">Node</span>&nbsp;
+              <span class="badge badge-secondary">AWS Lambda</span>&nbsp;
               <span class="badge badge-secondary">SEO</span>&nbsp;
               <span class="badge badge-secondary">Analytics</span>&nbsp;
               <span class="badge badge-secondary">WordPress</span>&nbsp;
@@ -431,6 +436,7 @@
               <span class="badge badge-secondary">Unit Testing</span>&nbsp;
               <span class="badge badge-secondary">Git</span>&nbsp;
               <span class="badge badge-secondary">Chrome Inspector</span>&nbsp;
+              <span class="badge badge-secondary">VS Code</span>&nbsp;
               <span class="badge badge-secondary">Atom</span>&nbsp;
               <span class="badge badge-secondary">CodeKit</span>&nbsp;
               <span class="badge badge-secondary">ESLint</span>&nbsp;
