Minor updates to content
mainly references to full stack instead of javascript developer

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <header id="home" class="narrow-width">
       <h1 class="display-1">Jon Urry</h1>
       <p class="lead">
-        JavaScript Web Application Developer and Designer
+        Full Stack Web Application Developer and Designer
       </p>
       <div class="header-flex-container">
         <div class="profile-svg-container">
@@ -271,7 +271,7 @@
         <div class="profile-info-container">
           <p class="h4">Hi there! I’m, Jon.</p>
           <p>I design and develop web applications for computers, mobiles and tablets.</p>
-          <p>I'm looking for a new job as a JavaScript Web Developer.</p>
+          <p>I'm looking for a new job as a Full Stack Web Developer.</p>
           <p>You can find examples of my work on this website.</p>
           <p>I love cycling, especially on quiet hilly roads, gravel and byways.</p>
           <p>My taste in music is rather eclectic, ranging from indie pop to afrobeat (amongst many other music genres).</p>
@@ -301,7 +301,7 @@
         <p>My past experience has mostly been developing apps for desktop computers.</p>
         <p>Now, I am completely refreshing my technological skill set and focusing on developing web applications using open
           source technologies.</p>
-        <p>Eventually, I will become a Full Stack Open Source JavaScript Developer.</p>
+        <p>Eventually, I will become a Full Stack Open Source Web Developer.</p>
         <p>Right now, I'm looking for my first job as a Web Developer.</p>
         <p>I realise that there is a mountain of stuff to learn to be a web developer but my past experience will stand me in
           good stead and I expect to progress quickly. Software development is not just about programming, it takes years
