Update reference job title

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                     problems. I have no hesitation in thoroughly recommending him.</p>
                   <footer class="card-text blockquote-footer text-right">
                     <a href="https://www.linkedin.com/in/stuartlmay/">Stuart May -
-                      <cite title="Source Title">Experienced Product Management Executive</cite>
+                      <cite title="Source Title">Product Manager at Google.com</cite>
                     </a>
                   </footer>
                 </blockquote>
